tests/ui/unnamed_receiver.stderr
error: the name `f` is defined multiple times
  --> tests/ui/unnamed_receiver.rs:10:9
   |
10 |         fn f(self: &Self);
   |         ^^^^^^^^^^^^^^^^^^
